Add collection & user edit routes
